--- a/pagina2.html
+++ b/pagina2.html
@@ -13,75 +13,104 @@
 
       <nav>
         <ul>
-            <a href="#"><li class="home">Home</li></a>
-            <a href="#"><li class="itens">Itens</li></a>
-            <a href="#"><li class="itens">Sobre nós</li></a>
-            <a href="#"><li class="itens">Login</li></a>
+          <a href="#">
+            <li class="home">Home</li>
+          </a>
+          <a href="./index.html#seçao2">
+            <li class="itens">Itens</li>
+          </a>
+          <a href="#sobre-nós">
+            <li class="itens">Sobre nós</li>
+          </a>
+          <a href="#">
+            <li class="itens">Login</li>
+          </a>
         </ul>
       </nav>
     </header>
 
     <main>
-        <section class="seçao1">
-            <img src="./img/dyinglight2banner.jpg">
-        </section>
+      <section class="seçao1">
+        <img src="./img/dyinglight2banner.jpg" />
+      </section>
 
-        <section class="seçao2">
-            <h1>JOKER</h1>
+      <section class="seçao2" id="seçao2">
+        <div class="joker-estrelinha"> 
+          <h1>JOKER</h1>
 
-            <div class="estrelas">
-                <img src="./img/star.png">
-                <img src="./img/star.png">
-                <img src="./img/star.png">
-                <img src="./img/star.png">
-                <img src="./img/star.png">
-            </div>
+          <div class="estrelas">
+            <img src="./img/star.png" />
+            <img src="./img/star.png" />
+            <img src="./img/star.png" />
+            <img src="./img/star.png" />
+            <img src="./img/star.png" />
+         </div>
+        </div>
 
-            <p>Em Dying Light 2, você encarna Aiden, um Peregrino. Peregrinos são
-                os poucos humanos que se arriscam a vagar entre assentamentos,
-                realizando missões perigosas. Aiden tem 20 anos e vive como
-                Peregrino desde os 14. O objetivo de Aiden é encontrar sua irmã
-                Mia, que ele perdeu no começo da contaminação global.
-            </p>
+        <p>
+          Em Dying Light 2, você encarna Aiden, um Peregrino. Peregrinos são os
+          poucos humanos que se arriscam a vagar entre assentamentos, realizando
+          missões perigosas. Aiden tem 20 anos e vive como Peregrino desde os
+          14. O objetivo de Aiden é encontrar sua irmã Mia, que ele perdeu no
+          começo da contaminação global.
+        </p>
 
-            <div class="desenvolvimento">
-                <div class="desenvolvedor">
-                    <h3>Desenvolvedor</h3>
-                    <h4>Techland</h4>
-                </div>
+        <div class="desenvolvimento">
+          <div class="desenvolvedor">
+            <h3>Desenvolvedor</h3>
+            <h4>Techland</h4>
+          </div>
 
-                <div class="projetor">
-                    <h3>Projetor</h3>
-                    <h4>Tymon Smektala</h4>
-                </div>
-            </div>
-
-            <h5>Trailer</h5>
-
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/68bZ1LKKh7Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-        </section>
-    </main>
-
-    <footer>
-      <div>
-        <div class="integrantes">
-          <h4>Ana Beatriz Rosa Henrique</h4>
-          <span>Responsável pelo desenvolvimento de...</span>
-
-          <div class="redes">
-            <a href="./img/Linkedin.png"></a>
-            <a href="./img/github.png"></a>
+          <div class="projetor">
+            <h3>Projetor</h3>
+            <h4>Tymon Smektala</h4>
           </div>
         </div>
 
-        <div class="integrantes">
-          <h4>Lucas Ferreira Soares</h4>
-          <span>Responsável pelo desenvolvimento de...</span>
+        <h5>Trailer</h5>
 
-          <div class="redes">
-            <a href="./img/Linkedin.png"></a>
-            <a href="./img/github.png"></a>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/68bZ1LKKh7Q"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </section>
+    </main>
+
+    <footer>
+      <div id="sobre-nós">
+        <div class="informaçoes">
+          <div class="integrantes">
+            <h4>Ana Beatriz Rosa Henrique</h4>
+            <span>Responsável pelo desenvolvimento de...</span>
+
+            <div class="redes">
+              <a
+                href="https://www.linkedin.com/in/ana-beatriz-rosa-henrique-3b5945232/"
+                ><img src="./img/Linkedin.png" alt="LinkedIn"
+              /></a>
+              <a href="https://github.com/nabiiaz"
+                ><img src="./img/github.png" alt="GitHub"
+              /></a>
+            </div>
+          </div>
+
+          <div class="integrantes">
+            <h4>Lucas Ferreira Soares</h4>
+            <span>Responsável pelo desenvolvimento de...</span>
+
+            <div class="redes">
+              <a href="https://www.linkedin.com/in/lucas-soares-33154a239/"
+                ><img src="./img/Linkedin.png" alt="LinkedIn"
+              /></a>
+              <a href="https://github.com/LucasTrawman"
+                ><img src="./img/github.png" alt="GitHub"
+              /></a>
+            </div>
           </div>
         </div>
       </div>
