--- a/index.html
+++ b/index.html
@@ -1,61 +1,80 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DH Gamer | Página Inicial</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <header>
-      <img src="./img/Logo.png" />
 
-      <nav>
-        <ul>
-          <a href="#"><li class="home">Home</li></a>
-          <a href="#"><li class="itens">Itens</li></a>
-          <a href="#"><li class="itens">Sobre nós</li></a>
-          <a href="#"><li class="itens">Login</li></a>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DH Gamer | Página Inicial</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-    <main>
-    
-      <section class="seçao1">
+<body>
+  <header>
+    <img src="./img/Logo.png" />
 
-        <div class="fundo">
-            
-            <div class="texto">
-                <h1>DH Gamer</h1>
-  
-                <p>Confira a maior coletânea de jogos que nós temos a te oferecer!</p>
-            </div>
-  
-          <button>Conferir</button>
+    <nav>
+      <ul>
+        <a href="#">
+          <li class="home">Home</li>
+        </a>
+        <a href="#seçao2">
+          <li class="itens">Itens</li>
+        </a>
+        <a href="#sobre-nós">
+          <li class="itens">Sobre nós</li>
+        </a>
+        <a href="#">
+          <li class="itens">Login</li>
+        </a>
+      </ul>
+    </nav>
+    <img class="menu-sanduiche" src="./img/menu.png" alt="menu">
+  </header>
+
+  <main>
+
+    <section class="seçao1">
+
+      <div class="fundo">
+
+        <div class="texto">
+          <h1>DH Gamer</h1>
+
+          <p>Confira a maior coletânea de jogos que nós temos a te oferecer!</p>
         </div>
-     </section>
-  
-        </div>
-      <section class="seçao2">
-        <h2>Itens</h2>
+
+        <button>Conferir</button>
+      </div>
+    </section>
+
+    </div>
+    <section class="seçao2" id="seçao2">
+      <h2>Itens</h2>
+
+
+      <div class="container-pai">
 
         <div class="container-itens">
           <div class="banner">
             <img src="./img/dyinglight2.jpg" />
 
-            <h3>Dying Light 2</h3>
+            <div class="descriçao">
 
-            <p>
-              Em Dying Light 2, você encarna Aiden, um Peregrino. Peregrinos são
-              os poucos humanos que se arriscam a vagar entre assentamentos,
-              realizando missões perigosas. Aiden tem 20 anos e vive como
-              Peregrino desde os 14. O objetivo de Aiden é encontrar sua irmã
-              Mia, que ele perdeu no começo da contaminação global.
-            </p>
+              <div class="conteudo">
+                <h3>Dying Light 2</h3>
 
-            <a class="abrir" href="./pagina2.html">Abrir</a>
+                <p>
+                  Em Dying Light 2, você encarna Aiden, um Peregrino. Peregrinos são
+                  os poucos humanos que se arriscam a vagar entre assentamentos,
+                  realizando missões perigosas. Aiden tem 20 anos e vive como
+                  Peregrino desde os 14. O objetivo de Aiden é encontrar sua irmã
+                  Mia, que ele perdeu no começo da contaminação global.
+                </p>
+              </div>
+
+              <a class="abrir" href="./pagina2.html">Abrir</a>
+            </div>
           </div>
         </div>
 
@@ -63,17 +82,21 @@
           <div class="banner">
             <img src="./img/littlenightmares.jpg" />
 
-            <h3>Little Nightmares II</h3>
+            <div class="descriçao">
+              <div class="conteudo">
+                <h3>Little Nightmares II</h3>
 
-            <p>
-              Neste segundo título de Little Nightmares, os jogadores são
-              apresentados a Mono, um jovem garoto preso em um mundo alterado
-              por uma transmissão maligna. Ao lado de Six, protagonista do
-              primeiro game, ele tenta descobrir a origem de todo o mal que
-              envolve seu mundo.
-            </p>
+                <p>
+                  Neste segundo título de Little Nightmares, os jogadores são
+                  apresentados a Mono, um jovem garoto preso em um mundo alterado
+                  por uma transmissão maligna. Ao lado de Six, protagonista do
+                  primeiro game, ele tenta descobrir a origem de todo o mal que
+                  envolve seu mundo.
+                </p>
+              </div>
 
-            <a class="abrir" href="./pagina2.html">Abrir</a>
+              <a class="abrir" href="./pagina2.html">Abrir</a>
+            </div>
           </div>
         </div>
 
@@ -81,17 +104,21 @@
           <div class="banner">
             <img src="./img/plaguetale.jpg" />
 
-            <h3>A Plague Tale: Requiem</h3>
+            <div class="descriçao">
+              <div class="conteudo">
+                <h3>A Plague Tale: Requiem</h3>
 
-            <p>
-              Requiem começa seis meses após os eventos de Innocence, com os
-              irmãos Amicia e Hugo tentando deixar para trás os horrores de sua
-              primeira aventura na França do século XIV. Previsivelmente, porém,
-              para onde eles vão, os problemas se seguem rapidamente. E neste
-              mundo, problemas são iguais a ratos.
-            </p>
+                <p>
+                  Requiem começa seis meses após os eventos de Innocence, com os
+                  irmãos Amicia e Hugo tentando deixar para trás os horrores de sua
+                  primeira aventura na França do século XIV. Previsivelmente, porém,
+                  para onde eles vão, os problemas se seguem rapidamente. E neste
+                  mundo, problemas são iguais a ratos.
+                </p>
+              </div>
 
-            <a class="abrir" href="./pagina2.html">Abrir</a>
+              <a class="abrir" href="./pagina2.html">Abrir</a>
+            </div>
           </div>
         </div>
 
@@ -99,16 +126,20 @@
           <div class="banner">
             <img src="./img/hogwartslegacy.jpg" />
 
-            <h3>Hogwarts Legacy</h3>
+            <div class="descriçao">
+              <div class="conteudo">
+                <h3>Hogwarts Legacy</h3>
 
-            <p>
-              Ambientado nos anos 1800, o game se passa antes dos eventos da
-              franquia principal. Seu personagem será um novo aluno na Escola de
-              Magia e Bruxaria de Hogwarts, que está começando os estudos
-              atrasado, no quinto ano.
-            </p>
+                <p>
+                  Ambientado nos anos 1800, o game se passa antes dos eventos da
+                  franquia principal. Seu personagem será um novo aluno na Escola de
+                  Magia e Bruxaria de Hogwarts, que está começando os estudos
+                  atrasado, no quinto ano.
+                </p>
+              </div>
 
-            <a class="abrir" href="./pagina2.html">Abrir</a>
+              <a class="abrir" href="./pagina2.html">Abrir</a>
+            </div>
           </div>
         </div>
 
@@ -116,17 +147,21 @@
           <div class="banner">
             <img src="./img/granturismo.jpg" />
 
-            <h3>Gran Turismo 7</h3>
+            <div class="descriçao">
+              <div class="conteudo">
+                <h3>Gran Turismo 7</h3>
 
-            <p>
-              Gran Turismo 7 oferece uma frota de mais de 400 carros, com
-              representantes icônicos dos principais fabricantes e exemplares
-              bastante variados e interessantes. Os veículos podem ser obtidos
-              como recompensas nas corridas, em sorteios ou comprados em uma das
-              três lojas disponíveis no mapa.
-            </p>
+                <p>
+                  Gran Turismo 7 oferece uma frota de mais de 400 carros, com
+                  representantes icônicos dos principais fabricantes e exemplares
+                  bastante variados e interessantes. Os veículos podem ser obtidos
+                  como recompensas nas corridas, em sorteios ou comprados em uma das
+                  três lojas disponíveis no mapa.
+                </p>
+              </div>
 
-            <a class="abrir" href="./pagina2.html">Abrir</a>
+              <a class="abrir" href="./pagina2.html">Abrir</a>
+            </div>
           </div>
         </div>
 
@@ -134,31 +169,37 @@
           <div class="banner">
             <img src="./img/gow.jpeg" />
 
-            <h3>God Of War: Ragnarok</h3>
+            <div class="descriçao">
+              <div class="conteudo">
+                <h3>God Of War: Ragnarok</h3>
 
-            <p>
-              Kratos e Atreus devem viajar pelos Nove Reinos para encontrar
-              respostas e se preparar para a batalha profetizada que causará o
-              fim do mundo. Isso, enquanto as forças asgardianas preparam-se
-              para guerra.
-            </p>
+                <p>
+                  Kratos e Atreus devem viajar pelos Nove Reinos para encontrar
+                  respostas e se preparar para a batalha profetizada que causará o
+                  fim do mundo. Isso, enquanto as forças asgardianas preparam-se
+                  para guerra.
+                </p>
+              </div>
 
-            <a class="abrir" href="./pagina2.html">Abrir</a>
-
+              <a class="abrir" href="./pagina2.html">Abrir</a>
+            </div>
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
 
-    <footer>
-      <div>
+  <footer>
+    <div id="sobre-nós">
+      <div class="informaçoes">
         <div class="integrantes">
           <h4>Ana Beatriz Rosa Henrique</h4>
           <span>Responsável pelo desenvolvimento de...</span>
 
           <div class="redes">
-            <a href="./img/Linkedin.png"></a>
-            <a href="./img/github.png"></a>
+            <a href="https://www.linkedin.com/in/ana-beatriz-rosa-henrique-3b5945232/"><img src="./img/Linkedin.png"
+                alt="LinkedIn"></a>
+            <a href="https://github.com/nabiiaz"><img src="./img/github.png" alt="GitHub"></a>
           </div>
         </div>
 
@@ -167,13 +208,16 @@
           <span>Responsável pelo desenvolvimento de...</span>
 
           <div class="redes">
-            <a href="./img/Linkedin.png"></a>
-            <a href="./img/github.png"></a>
+            <a href="https://www.linkedin.com/in/lucas-soares-33154a239/"><img src="./img/Linkedin.png"
+                alt="LinkedIn"></a>
+            <a href="https://github.com/LucasTrawman"><img src="./img/github.png" alt="GitHub"></a>
           </div>
         </div>
       </div>
+    </div>
 
-      <span class="checkpoint"> Checkpoint 2 desenvolvido em 2022 </span>
-    </footer>
-  </body>
+    <span class="checkpoint"> Checkpoint 2 desenvolvido em 2022 </span>
+  </footer>
+</body>
+
 </html>
