--- a/pagina2.html
+++ b/pagina2.html
@@ -27,6 +27,7 @@
           </a>
         </ul>
       </nav>
+      <img class="menu-sanduiche" src="./img/menu.png" alt="menu">
     </header>
 
     <main>
@@ -35,8 +36,8 @@
       </section>
 
       <section class="seçao2" id="seçao2">
-        <div class="joker-estrelinha"> 
-          <h1>JOKER</h1>
+        <div class="dying-estrelinha"> 
+          <h1>DYING LIGHT 2</h1>
 
           <div class="estrelas">
             <img src="./img/star.png" />
