--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DH Gamer | Página Inicial</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -44,7 +45,7 @@
           <p>Confira a maior coletânea de jogos que nós temos a te oferecer!</p>
         </div>
 
-        <button>Conferir</button>
+        <a href="#seçao2"> <button>Conferir</button> </a>
       </div>
     </section>
 
@@ -218,6 +219,8 @@
 
     <span class="checkpoint"> Checkpoint 2 desenvolvido em 2022 </span>
   </footer>
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
