--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DH Gamer | Página Inicial</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
@@ -25,7 +24,7 @@
         <a href="#sobre-nós">
           <li class="itens">Sobre nós</li>
         </a>
-        <a href="#">
+        <a href="./login.html">
           <li class="itens">Login</li>
         </a>
       </ul>
@@ -195,7 +194,7 @@
       <div class="informaçoes">
         <div class="integrantes">
           <h4>Ana Beatriz Rosa Henrique</h4>
-          <span>Responsável pelo desenvolvimento de...</span>
+          <span>Responsável pelo desenvolvimento de todo o trabalho</span>
 
           <div class="redes">
             <a href="https://www.linkedin.com/in/ana-beatriz-rosa-henrique-3b5945232/"><img src="./img/Linkedin.png"
@@ -206,7 +205,7 @@
 
         <div class="integrantes">
           <h4>Lucas Ferreira Soares</h4>
-          <span>Responsável pelo desenvolvimento de...</span>
+          <span>Responsável pelo desenvolvimento de todo o trabalho</span>
 
           <div class="redes">
             <a href="https://www.linkedin.com/in/lucas-soares-33154a239/"><img src="./img/Linkedin.png"
@@ -219,8 +218,6 @@
 
     <span class="checkpoint"> Checkpoint 2 desenvolvido em 2022 </span>
   </footer>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
