--- a/pagina2.html
+++ b/pagina2.html
@@ -87,7 +87,7 @@
         <div class="informaçoes">
           <div class="integrantes">
             <h4>Ana Beatriz Rosa Henrique</h4>
-            <span>Responsável pelo desenvolvimento de...</span>
+            <span>Responsável pelo desenvolvimento de todo o trabalho</span>
 
             <div class="redes">
               <a
@@ -102,7 +102,7 @@
 
           <div class="integrantes">
             <h4>Lucas Ferreira Soares</h4>
-            <span>Responsável pelo desenvolvimento de...</span>
+            <span>Responsável pelo desenvolvimento de todo o trabalho</span>
 
             <div class="redes">
               <a href="https://www.linkedin.com/in/lucas-soares-33154a239/"
