--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DH Gamer | Página Inicial</title>
+  <title>DH Games | Página Inicial</title>
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
